variables.RunHalf.scala.error
Erreur de compilation :
RunHalf:3: error: not found: value biscuit
while (2 * biscuits != caseOrange + 1) {{avance()}; if (estSurOrange()) {caseOrange+=1;} ;if (estSurBiscuit()) {biscuit+=1;};} 
                                                                                                                ^